--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,19 +7,28 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+  display: block;
+  text-align: center;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
+#ejercicioDos { 
+ display: none;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
+#ejercicioTres {
+ position: relative;
+ top: 100px;
+ left: 200px;
+ 
+}
 
 
 
@@ -27,12 +36,33 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Acá va tu código */
 
-
+#ejercicioCuatro {
+ position: fixed;
+ top: 0;
+ left: 0;
+}
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
-
+#ejercioCinco {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row-reverse;
+}
 
 
 /* Ejercicio 6. */
+
+/* Ejerccio 7. */
+
+#elementoSiete {
+
+  height:700px;
+  width:700px;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content:space-between;
+  align-items: center;
+}
